// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepHeader /> should display active step header 1`] = `
<StepHeader
  isActive={true}
  isCompleted={false}
  title="test title"
>
  <styled.div>
    <div
      className="sc-iBPRYJ kNAqXI"
    >
      <styled.div
        isActive={true}
        isCompleted={false}
      >
        <div
          className="sc-jSgupP jntliL"
        />
      </styled.div>
      <styled.div
        isActive={true}
      >
        <div
          className="sc-gKsewC fSHfCq"
        >
          test title
        </div>
      </styled.div>
    </div>
  </styled.div>
</StepHeader>
`;

exports[`<StepHeader /> should display inactive step header 1`] = `
<StepHeader
  isActive={false}
  isCompleted={false}
  title="second test title"
>
  <styled.div>
    <div
      className="sc-iBPRYJ kNAqXI"
    >
      <styled.div
        isActive={false}
        isCompleted={false}
      >
        <div
          className="sc-jSgupP fJGOSP"
        />
      </styled.div>
      <styled.div
        isActive={false}
      >
        <div
          className="sc-gKsewC hmpTsI"
        >
          second test title
        </div>
      </styled.div>
    </div>
  </styled.div>
</StepHeader>
`;
